@@ -70,6 +70,8 @@ typedef enum ColorElements_ {
    PROCESS_BASENAME,
    PROCESS_HIGH_PRIORITY,
    PROCESS_LOW_PRIORITY,
+   PROCESS_THREAD,
+   PROCESS_THREAD_BASENAME,
    BAR_BORDER,
    BAR_SHADOW,
    GRAPH_1,
